# ergg

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md  ergg.ini
.cursor/: mcp.json
resources/: resources.rc
src/: config.cpp  config.hpp  dllmain.cpp  fake_block.cpp  fake_block.hpp  logs.cpp  logs.hpp  player_list.cpp  player_list.hpp
src/gui/: render_block_player.cpp  render_block_player.hpp  render_disconnect.cpp  render_disconnect.hpp  render_logs.cpp  render_logs.hpp  render_overlay.cpp  render_overlay.hpp  render_player_list.cpp  render_player_list.hpp  render_view_player.cpp  render_view_player.hpp  styles.hpp  utils.cpp  utils.hpp
src/renderer/: renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  utils.hpp
